Backport JEI/KubeJS integration for 1.20.1